fix(sidebar): center align grid items in SortDialog for consistent vertical alignment

--- a/browser/css/jssidebar.css
+++ b/browser/css/jssidebar.css
@@ -803,3 +803,8 @@ span.jsdialog.sidebar.ui-treeview-notexpandable {
 #StyleListDeck #left .sidebar.unotoolbutton {
 	margin: 0 5px;
 }
+
+/* Writer - Table - Sort */
+#SortDialog #box2 :is(#grid7, #grid5) {
+	align-items: center;
+}
